# libgbfs

./: .gitignore  .gitmodules  CMakeLists.txt  build.py  build.sh  readme.md
buildsystem/: GBA.cmake  findSources.py
include/: gbfs.h
source/: libgbfs.c
